--- a/prominad/index.html
+++ b/prominad/index.html
@@ -1,10 +1,12 @@
-<!DOCTYPE html>
-<html lang="">
+<!doctype html>
+<html lang="ru">
   <head>
-    <meta charset="UTF-8">
-    <link rel="icon" href="/favicon.ico">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Vite App</title>
+    <meta charset="UTF-8" />
+    <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#A2D480" />
+    <link rel="preload" as="image" href="/images/mascot-corgi.svg">
+    <title>По следам Фёдора</title>
   </head>
   <body>
     <div id="app"></div>
