--- a/prominad/index.html
+++ b/prominad/index.html
@@ -5,7 +5,8 @@
     <!-- <link rel="icon" type="image/svg+xml" href="/vite.svg" /> -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="theme-color" content="#A2D480" />
-    <link rel="preload" as="image" href="/images/mascot-corgi.svg">
+    <link rel="preload" as="image" href="/images/logo.svg">
+    <link rel="icon" type="image/svg+xml" href="/images/logo.svg" />
     <title>По следам Фёдора</title>
   </head>
   <body>
